--- a/styles/styles.css
+++ b/styles/styles.css
@@ -307,3 +307,67 @@
     }
   }
 }
+
+footer {
+  background-color: #1c5fa8;
+  color: #fff;
+  border-top: 3px solid #fff;
+
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 32px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+    .address-info {
+
+      .address-info-title {
+        font-weight: 800;
+        font-size: 24px;
+      }
+
+      
+      .mail-link {
+        text-decoration: none;
+        color: #fff;
+      }
+    }
+
+    .address-info address {
+      font-size: 18px;
+      margin: 0;
+    }
+
+    .social-media {
+      .social-media-title {
+        text-align: right;
+        font-weight: 800;
+        font-size: 24px;
+      }
+
+      .social-media-list {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: row;
+        column-gap: 20px;
+
+        .social-media-item {
+          list-style: none;
+          font-size: 20px;
+        }
+      }
+
+      @media (max-width: 992px) {
+        align-self: flex-end;
+      }
+    }
+
+    @media (max-width: 992px) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+}
