--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,6 +86,9 @@
 
 .section {
   padding: 48px 0;
+  opacity: 0;
+  transition: all 0.5s linear;
+  transform: translateY(100px);
 
   .section-title {
     margin: 0;
@@ -370,4 +373,12 @@ footer {
       align-items: flex-start;
     }
   }
+}
+
+.appear {
+  opacity: 1;
+}
+
+.stack {
+  transform: translateY(0px);
 }
